<resources>
    <string name="app_name">JTColorPicker</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="title">Pick a Color</string>
    <string name="enter_color_name">Enter Color Name</string>
    <string name="slotNumber">Slot Number:</string>
    <string name="save">SAVE</string>
    <string name="load">LOAD</string>

</resources>
