<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" tools:context=".MainActivity">

    <SeekBar
            android:layout_width="0dp"
            android:layout_height="28dp"
            android:id="@+id/blueBar"
            android:thumbTint="@color/blue"
            android:progressTint="@color/blue"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/redLabel" app:layout_constraintEnd_toStartOf="@+id/blueLabel"
            android:layout_marginBottom="36dp" app:layout_constraintBottom_toTopOf="@+id/greenBar"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="16dp"
            app:layout_constraintHorizontal_chainStyle="spread_inside"/>
    <TextView
            android:text="@string/blue"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:id="@+id/blueLabel"
            app:layout_constraintTop_toBottomOf="@+id/redLabel" app:layout_constraintStart_toEndOf="@+id/blueBar"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="44dp"
            app:layout_constraintBottom_toTopOf="@+id/greenLabel" android:layout_marginEnd="32dp"
    />
    <SeekBar
            android:layout_width="0dp"
            android:layout_height="28dp"
            android:id="@+id/greenBar"
            android:thumbTint="@color/green"
            android:progressTint="@color/green"
            android:layout_marginTop="62dp"
            app:layout_constraintEnd_toStartOf="@+id/greenLabel" android:layout_marginBottom="64dp"
            app:layout_constraintBottom_toTopOf="@+id/colorPick" app:layout_constraintTop_toTopOf="@+id/blueLabel"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="16dp"
            app:layout_constraintHorizontal_chainStyle="spread_inside" app:layout_constraintHorizontal_bias="1.0"/>


    <TextView
            android:text="@string/green"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:id="@+id/greenLabel"
            app:layout_constraintTop_toBottomOf="@+id/blueLabel" app:layout_constraintStart_toEndOf="@+id/greenBar"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="70dp"
            app:layout_constraintBottom_toTopOf="@+id/colorPick" android:layout_marginEnd="32dp"
            android:visibility="visible"/>

    <TextView
            android:text="@string/title"
            android:id="@+id/appHead"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_marginTop="89dp"
            android:layout_marginBottom="34dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/colScreen" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <SurfaceView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/colScreen"
            app:layout_constraintTop_toBottomOf="@+id/appHead"
            android:layout_marginBottom="116dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/slotNumber" app:layout_constraintStart_toStartOf="parent"/>
    <SeekBar
            android:layout_width="0dp"
            android:layout_height="28dp"
            android:id="@+id/redBar"
            android:thumbTint="@color/red"
            android:progressTint="@color/red"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/slotNumber" app:layout_constraintEnd_toStartOf="@+id/redLabel"
            android:layout_marginBottom="55dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/blueLabel" android:layout_marginEnd="16dp"
            app:layout_constraintHorizontal_chainStyle="packed"/>
    <TextView
            android:text="@string/red"
            android:layout_width="100dp"
            android:id="@+id/redLabel"
            android:layout_height="20dp"
            app:layout_constraintTop_toBottomOf="@+id/slotNumber" app:layout_constraintStart_toEndOf="@+id/redBar"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="38dp"
            app:layout_constraintBottom_toTopOf="@+id/blueLabel" android:layout_marginEnd="32dp"
    />
    <Button
            android:text="@string/save"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:id="@+id/saveButt"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/colScreen" app:layout_constraintVertical_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/loadButt" android:layout_marginEnd="31dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/load"
            android:layout_width="0dp"
            android:id="@+id/loadButt"
            android:layout_height="40dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/colScreen" app:layout_constraintVertical_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="37dp" app:layout_constraintEnd_toStartOf="@+id/saveButt"
            android:layout_marginEnd="167dp"/>
    <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/colorPick"
            app:layout_constraintTop_toBottomOf="@+id/greenLabel" android:layout_marginBottom="55dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>

    <android.support.design.widget.TextInputLayout
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/colScreen" android:layout_marginBottom="77dp"
            app:layout_constraintBottom_toTopOf="@+id/redBar" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:id="@+id/namerLayout" android:textColorHint="@color/green">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_color_name" android:id="@+id/namer"/>
    </android.support.design.widget.TextInputLayout>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/slotNumber"
            android:text="@string/slotNumber"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintTop_toBottomOf="@+id/colScreen"
            android:layout_marginBottom="56dp" app:layout_constraintBottom_toTopOf="@+id/redLabel"/>

</android.support.constraint.ConstraintLayout>
